# franz-clients

./: README.md
c/: franzclient.c  franzclient.h
elixir/: main.exs
go/: go.mod  lib.go
ruby/: franzclient.rb
rust/: Cargo.toml  README.md
rust/examples/: client.rs
rust/src/: lib.rs
scala/: build.sbt
scala/src/main/scala/: Main.scala
