[package]
name = "franz-client"
version = "0.6.2"
edition = "2021"
authors = ["Maxi Saparov <max.saparov@gmail.com>"]
description = "client for franz server written in rust"
documentation = "https://docs.rs/franz-client"
homepage = "https://github.com/MostlyMaxi/franz-client"
repository = "https://github.com/MostlyMaxi/franz-client"
readme = "README.md"
keywords = ["cli", "queue"]
license = "MIT"
categories = []

[dependencies]
thiserror = "1.0.64"

[dev-dependencies]
rand = "0.8.5"
